[package]
name = "iamitul"
version = "0.1.0"
edition = "2021"
authors = ["Md. Istiuk Ahmed Mitul"]
description = "High-performance reconnaissance tool"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "3.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
trust-dns-resolver = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
anyhow = "1.0"
openssl = { version = "0.10", features = ["vendored"] }
base64 = "0.13"
regex = "1.0"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
hex = "0.4"
indicatif = "0.17.8"
